--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@
 .about li {
     list-style: none;
 }
-
 .about i {
     color: orangered;
 }
@@ -40,7 +39,6 @@
     background-color: lightgray;
     color: white;
 }
-
 .small {
     display: none;
 }
@@ -77,6 +75,7 @@ nav li i {
     color: white;
     border-radius: 15px;
     padding: 2px;
+    width: 150px;
 }
 
 nav a {
@@ -98,11 +97,11 @@ nav a {
     display: inline-block;
     padding: 5px;
     background-color: white;
-    font-size: 15px;
+    font-size: 20px;
 }
 
 .content h5 {
-    font-size: 40px;
+    font-size: 50px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
 }
@@ -193,6 +192,28 @@ nav a {
     font-weight: bold;
 }
 
+.offcanvas-body .navbar-nav{
+    gap:15px;
+}
+#video-frame{
+    align-items: center;
+    width:800px;
+    height:300px;
+    border-radius:5px;
+    position: absolute;
+    top:150px;
+    left:25%;
+}
+#play-icon{
+    width:30px;
+    height: 30px;
+    color: orangered;
+    border-radius: 50%;
+    background-color: white;
+    border:1px solid;
+    padding:10px;
+    
+}
 /* ----------------------------------------------------------------------------------------------------------------------------------------------------------------- */
 /* Media query for mobile large */
 
@@ -290,27 +311,52 @@ nav a {
         width: 50px;
         height: 50px;
     }
+
     .featured-icon img {
-        position: absolute;
+        position: relative;
+        left: 10px;
+        top: 10px;
     }
 
     .video img {
         width: 100%;
-        height: 150px;
+        height: auto;
+        margin-top: 1000px;
     }
 
     .video-text {
+        font-size: 20px;
         text-align: center;
         position: relative;
-        bottom: 330px;
+        bottom: 130px;
+        left: 0px;
     }
 
+    .video-text p {
+        font-size: 10px;
+        margin-bottom:0px;
+    }
+
+    .video-text h2 {
+        color: white;
+        font-weight: bold;
+        font-size: 20px;
+        margin-top: 0px;
+    }
+    #video-frame{
+        margin:0px;
+        width:300px;
+        height: 100px;
+        position: absolute;
+        left:15%;
+        top:100px;
+    }
 
 }
 
 
 
-/* ----------------------------------------------------------------------------------------------------------------------------------------------------------------- */
+/* -----------------------------------------------TABLET------------------------------------------------------------------------------------------------------------------ */
 /* Media query for tablet*/
 @media (min-width:768px) and (max-width:1023px) {
     .heading {
@@ -411,5 +457,64 @@ nav a {
         position: relative;
         left: 145px;
         top: 85px;
+    }
+
+    .video img {
+        width: 100%;
+        height: auto;
+        margin-top: 1000px;
+    }
+
+    .video-text {
+        position: relative;
+        bottom: 235px;
+        right: 15px;
+    }
+
+    .video-text p {
+        font-size: 15px;
+        margin-bottom:0px;
+    }
+
+    .video-text h2 {
+        color: white;
+        font-weight: bold;
+        font-size: 20px;
+    }
+     #video-frame{
+        margin:0px;
+        width:500px;
+        height: auto;
+        position: absolute;
+        left:20%;
+        top:100px;
+    }
+}
+
+
+/* --------------------------------------LAPTOP--------------------------------------------------------------------------------------------------------- */
+/* Media query for laptop */
+@media (min-width:1024px) and (max-width:1439px){
+.content {
+    position: absolute;
+    bottom: 40%;
+    left: 15%;
+}
+.featured-icon img {
+    position: relative;
+    left: 3px;
+    bottom: 65px;
+}
+
+.links {
+    width: 400px;
+}
+ #video-frame{
+        margin:0px;
+        width:700px;
+        height: auto;
+        position: absolute;
+        left:15%;
+        top:145px;
     }
 }
