--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 .about li {
     list-style: none;
 }
+
 .about i {
     color: orangered;
 }
@@ -39,6 +40,7 @@
     background-color: lightgray;
     color: white;
 }
+
 .small {
     display: none;
 }
@@ -61,12 +63,13 @@ nav li {
     list-style: none;
 }
 
-nav li i {
+.schedule i {
     color: white;
     background-color: orangered;
     border-radius: 50%;
     font-size: 20px;
-    padding: 5px;
+    padding: 4px;
+    padding-right: 25px
 }
 
 .schedule {
@@ -74,8 +77,8 @@ nav li i {
     background-color: black;
     color: white;
     border-radius: 15px;
-    padding: 2px;
-    width: 150px;
+    padding: 5px;
+    width: 162px;
 }
 
 nav a {
@@ -87,21 +90,21 @@ nav a {
 }
 
 .content {
-    color: white;
     position: absolute;
-    bottom: 20%;
+    bottom: 10%;
     left: 15%;
 }
 
 .content p {
-    display: inline-block;
-    padding: 5px;
     background-color: white;
-    font-size: 20px;
+    font-size: 16px;
+    width: 120px;
+    padding: 3px;
 }
 
 .content h5 {
-    font-size: 50px;
+    color: white;
+    font-size: 60px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
 }
@@ -142,7 +145,7 @@ nav a {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    box-shadow: 2px 2px 5px grey;
+    box-shadow: 0px 0px 5px grey;
     padding: 20px;
     border-radius: 5px;
 }
@@ -192,28 +195,204 @@ nav a {
     font-weight: bold;
 }
 
-.offcanvas-body .navbar-nav{
-    gap:15px;
+.offcanvas-body .navbar-nav {
+    gap: 15px;
 }
-#video-frame{
+
+#video-frame {
     align-items: center;
-    width:800px;
-    height:300px;
-    border-radius:5px;
+    width: 800px;
+    height: 300px;
+    border-radius: 5px;
     position: absolute;
-    top:150px;
-    left:25%;
+    top: 180px;
+    left: 25%;
 }
-#play-icon{
-    width:30px;
-    height: 30px;
+
+#play-icon {
     color: orangered;
     border-radius: 50%;
     background-color: white;
-    border:1px solid;
-    padding:10px;
-    
+
+    padding: 8px;
+    position: relative;
+    bottom: 140px;
+    left: 760px;
+    font-size: 18px;
+    padding-right: 30px;
+    padding-left: 15px;
+    box-shadow: 0 0 30px orangered;
 }
+
+.achieve {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.box {
+    position: relative;
+    width: 220px;
+    height: 70px;
+    border-radius: 5px;
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    background-color: #fde9e2;
+    ;
+
+}
+
+.box span {
+    padding: 15px;
+    font-size: 35px;
+    font-weight: bolder;
+    color: orangered;
+}
+
+.box p {
+    font-weight: bold;
+    padding: 2px;
+    align-items: center;
+    margin: 0px 5px;
+}
+
+.circle {
+    background-color: orangered;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    position: absolute;
+    left: 86%;
+    bottom: 60%;
+}
+
+.best {
+    background-color: whitesmoke;
+}
+
+.deal {
+    padding: 0px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.find span {
+    font-size: 25px;
+}
+
+.find h3 {
+    font-size: 40px;
+}
+
+.apt {
+    display: flex;
+    gap: 20px;
+}
+
+.apt button {
+    border: 0px;
+    border-radius: 3px;
+    background-color: black;
+    color: white;
+    padding: 10px 30px;
+}
+
+.data {
+
+    padding: 0px 100px;
+    display: flex;
+    gap: 70px;
+}
+
+.flat {
+    width: 600px;
+    height: 350px;
+    border-radius: 5px;
+    padding: 20px;
+    box-shadow: 0px 0px 5px grey;
+}
+
+.home {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 20px;
+}
+.home p{
+    color:grey;
+}
+
+.extra-info {
+    padding: 20px;
+    width: 700px;
+}
+
+.extra-info p {
+    padding-bottom: 20px;
+}
+
+.extra-info h5 {
+    font-size: 20px;
+    padding-bottom: 20px;
+    font-weight: bold;
+}
+.properties{
+    text-align: center;
+}
+.properties span{
+    color:red;
+}
+.properties h3{
+    font-size: 30px;
+    font-weight: bold;
+}
+.card-container{
+    padding: 0px 60px;
+}
+.cards{
+    display: flex;
+    gap: 30px;
+}
+.card{
+width: 500px;
+height: 600px;
+padding: 15px;
+background-color: whitesmoke;
+}
+.cost{
+    display: flex;
+    justify-content: space-between;
+}
+.rooms{
+   margin:0px 0px;
+}
+.rooms ul{
+    display: flex;
+    gap:20px;
+    list-style: none;
+}
+.area{
+    margin:0px 0px;
+}
+.area ul{
+     display: flex;
+    gap:20px;
+    list-style: none;
+}
+.visit{
+    text-align: center;
+    background-color: black;
+    color:white;
+    width:140px;
+    padding:4px;
+    border-radius: 25px;
+   align-items: center;
+}
+
+
+
+
+
 /* ----------------------------------------------------------------------------------------------------------------------------------------------------------------- */
 /* Media query for mobile large */
 
@@ -283,8 +462,10 @@ nav a {
     }
 
     .content p {
+        background-color: white;
+        font-size: 9px;
+        width: 70px;
         padding: 2px;
-        font-size: 10px;
     }
 
     .content h5 {
@@ -334,7 +515,7 @@ nav a {
 
     .video-text p {
         font-size: 10px;
-        margin-bottom:0px;
+        margin-bottom: 0px;
     }
 
     .video-text h2 {
@@ -343,14 +524,74 @@ nav a {
         font-size: 20px;
         margin-top: 0px;
     }
-    #video-frame{
-        margin:0px;
-        width:300px;
+
+    #video-frame {
+        margin: 0px;
+        width: 300px;
         height: 100px;
         position: absolute;
-        left:15%;
-        top:100px;
+        left: 15%;
+        top: 100px;
     }
+
+    #play-icon {
+        position: relative;
+        bottom: 67px;
+        left: 197px;
+        font-size: 12px;
+        padding-right: 16px;
+        padding-left: 7px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+
+    .achieve {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
+    }
+
+    .deal {
+        padding: 0px 30px;
+    }
+
+    .find span {
+        font-size: 13px;
+    }
+
+    .find h3 {
+        font-size: 18px;
+    }
+
+    .apt {
+        display: flex;
+        gap: 5px;
+    }
+
+    .apt button {
+        padding: 3px;
+        font-size: 10px;
+    }
+
+    .data {
+        display: flex;
+        flex-direction: column;
+        gap: 70px;
+        align-items: center;
+    }
+
+    .flat {
+        width: 300px;
+    }
+
+    .extra-info {
+        width: 300px;
+    }
+
+
+
+
 
 }
 
@@ -415,17 +656,19 @@ nav a {
 
     .content {
         position: absolute;
-        bottom: 50%;
+        bottom: 40%;
         left: 15%;
     }
 
     .content p {
         padding: 2px;
+        background-color: white;
         font-size: 10px;
+        width: 80px;
     }
 
     .content h5 {
-        font-size: 30px;
+        font-size: 40px;
         font-weight: bold;
     }
 
@@ -473,7 +716,7 @@ nav a {
 
     .video-text p {
         font-size: 15px;
-        margin-bottom:0px;
+        margin-bottom: 0px;
     }
 
     .video-text h2 {
@@ -481,40 +724,133 @@ nav a {
         font-weight: bold;
         font-size: 20px;
     }
-     #video-frame{
-        margin:0px;
-        width:500px;
+
+    #video-frame {
+        margin: 0px;
+        width: 500px;
         height: auto;
         position: absolute;
-        left:20%;
-        top:100px;
+        left: 20%;
+        top: 100px;
     }
+
+    #play-icon {
+        position: relative;
+        bottom: 120px;
+        left: 385px;
+        font-size: 18px;
+    }
+
+    .deal {
+        padding: 0px 30px;
+    }
+
+    .find span {
+        font-size: 18px;
+    }
+
+    .find h3 {
+        font-size: 35px;
+    }
+
+    .apt {
+        display: flex;
+        gap: 10px;
+    }
+
+    .apt button {
+        padding: 5px;
+        font-size: 18px;
+    }
+
+    .data {
+        display: flex;
+        flex-direction: column;
+        gap: 70px;
+        align-items: center;
+    }
+
+    .flat {
+        width: 500px;
+    }
+
+    .extra-info {
+        width: 500px;
+    }
+
 }
 
 
 /* --------------------------------------LAPTOP--------------------------------------------------------------------------------------------------------- */
 /* Media query for laptop */
-@media (min-width:1024px) and (max-width:1439px){
-.content {
-    position: absolute;
-    bottom: 40%;
-    left: 15%;
-}
-.featured-icon img {
-    position: relative;
-    left: 3px;
-    bottom: 65px;
-}
+@media (min-width:1024px) and (max-width:1439px) {
+    .content {
+        position: absolute;
+        bottom: 40%;
+        left: 15%;
+    }
 
-.links {
-    width: 400px;
-}
- #video-frame{
-        margin:0px;
-        width:700px;
+    .content p {
+        padding: 3px;
+    }
+
+    .featured-icon img {
+        position: relative;
+        left: 3px;
+        bottom: 65px;
+    }
+
+    .links {
+        width: 400px;
+    }
+
+    #video-frame {
+        margin: 0px;
+        width: 700px;
         height: auto;
         position: absolute;
-        left:15%;
-        top:145px;
+        left: 15%;
+        top: 145px;
     }
+
+    #play-icon {
+        position: relative;
+        bottom: 150px;
+        left: 480px;
+    }
+
+    .deal {
+        padding: 0px 40px
+    }
+
+    .find span {
+        font-size: 20px;
+    }
+
+    .find h3 {
+        font-size: 40px;
+    }
+
+    .apt button {
+        font-size: 20px;
+    }
+
+    .data {
+        padding: 0px 40px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+    .data img{
+        width:600px;
+        height:350px;
+    }
+    .flat {
+        width: 300px;
+        height: 350px;
+        border-radius: 5px;
+        padding: 20px;
+    }
+
+
 }
