--- a/style.css
+++ b/style.css
@@ -429,7 +429,7 @@ nav a {
 
 .agents iframe {
     position: absolute;
-    top: 50%;
+    top: 30%;
     left: 10%;
 }
 
@@ -438,7 +438,7 @@ nav a {
     width: 455px;
     position: absolute;
     left: 60%;
-    top: 50%;
+    top: 30%;
     padding: 15px;
     border-radius: 5px;
     background-color: white;
@@ -475,7 +475,7 @@ form textarea {
 
 .get-in {
     position: absolute;
-    top: 20%;
+    top: 15%;
     left: 41%;
     text-align: center;
 }
@@ -495,7 +495,7 @@ form textarea {
     gap: 20px;
     position: relative;
     left: 9%;
-    top: 600px;
+    top: 350px;
 }
 .phone,
 .mail {
@@ -526,15 +526,131 @@ footer{
     align-content: center;
     text-align: center;
 }
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+/* ===========================PROPERTIES PAGE STYLE======================================================================================= */
+.place{
+    position: relative;
+}
+.place img{
+    width:100%;
+}
+.house{
+    color: white;
+    text-align: center;
+    position:absolute;
+    bottom:30%;
+    left:42%;
+}
+.house span{
+    background-color: white;
+    color:black;
+    padding:10px 18px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.house h3{
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 40px;
+ font-weight: bolder;
+ padding:30px 10px;
+}
+.show {
+  display: flex;              /* enables flexbox */
+  justify-content: center;    /* centers horizontally */
+  gap: 20px;                  /* space between buttons */
+  margin:80px 0px;           /* optional: push them down */
+}
+.show button{
+    width:120px;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    background-color: black;
+    padding:5px;
+}
+.pagination{
+    display: flex;
+    gap:10px;
+    justify-content: center;
+    padding:80px 0px;
+}
+.page{
+    height: 30px;
+    width:30px;
+    border-radius: 50%;
+    background-color: black;
+    color:white;
+    text-align: center;
+}
 
-/* footer {
-  position: relative;  
-  clear: both;         
-  text-align: center;
-  padding: 15px;
-  background: black;
-  color: white;
-} */
+
+
+
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+/* ===========================CONTACT US STYLE======================================================================================= */
+.contact{
+    display:flex;
+    gap:50px;
+    padding: 100px 0px;
+    justify-content: center;
+}
+.enquire{
+     height: 350px;
+    width: 665px;
+    padding:5px;
+    position: relative;
+}
+.enquire span{
+    color: orangered;
+    padding:10px;
+}
+.enquire h3{
+    font-weight: bold;
+    padding:10px;
+}
+.enquire p{
+    padding:10px;
+}
+.support {
+    display: flex;
+    flex-direction: column;
+    gap:25px;
+    padding:10px;
+}
+.number p,.business p{
+    padding:0px;
+}
+.contact form{
+     height: 630px;
+    width: 455px;
+    padding: 15px;
+    border-radius: 5px;
+    background-color: white;
+    box-shadow: 0px 0px 5px grey;
+    font-size: 18px;
+}
+.contact form label {
+    width: 100%;
+    padding: 10px 20px;
+}
+
+.contact form input {
+    width: 100%;
+    padding: 10px 25px;
+    border-radius: 25px;
+    border: none;
+    background-color: whitesmoke;
+}
+
+form textarea {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 25px;
+    background-color: whitesmoke;
+}
+.map iframe{
+    width:100%;
+    padding: 0px 80px;
+}
 
 
 
@@ -745,12 +861,14 @@ footer{
     .cards {
         display: flex;
         flex-direction: column;
+        align-items: center;
     }
 
     .card {
         width: 360px;
         height: 510px !important;
         padding: 20px;
+        
     }
     .agents{
         margin-bottom: 300px;
@@ -835,6 +953,91 @@ footer{
 }
 .mail h5,.phone h5{
     font-size:12px;
+}
+
+
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+/* ===========================PROPERTIES STYLE======================================================================================= */
+.house {
+    color: white;
+    text-align: center;
+    position: absolute;
+    bottom: 7%;
+    left: 38%;
+}
+.house h3 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    padding: 5px 10px;
+}
+.house span {
+   padding: 0px 11px;
+    font-size: 10px
+}
+.show {
+  display: flex;             
+  justify-content: center;    
+  gap: 10px;                 
+}
+.show button{
+    font-size: 12px;
+    width:80px;
+}
+footer {
+    font-size: 10px;
+}
+
+
+
+
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+/* ===========================CONTACT US PAGE STYLE======================================================================================= */
+
+.contact{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.enquire{
+     height: 350px;
+    width: 400px;
+    padding:5px;
+}
+
+.support {
+    display: flex;
+    flex-direction: column;
+    gap:25px;
+    padding:10px;
+  
+}
+.contact form{
+     height: 630px;
+    width: 400px;
+    padding: 15px;
+    border-radius: 5px;
+    background-color: white;
+    box-shadow: 0px 0px 5px grey;
+    font-size: 18px;
+}
+.contact form label {
+    width: 100%;
+    padding: 10px 20px;
+}
+
+.contact form input {
+    width: 100%;
+    padding: 10px 25px;
+    border-radius: 25px;
+    border: none;
+    background-color: whitesmoke;
+}
+
+form textarea {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 25px;
+    background-color: whitesmoke;
 }
 
 }
@@ -1094,6 +1297,46 @@ footer{
     flex-direction: column;
 }
 
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+/* ===========================PROPERTIES STYLE======================================================================================= */
+
+
+.house {
+    color: white;
+    text-align: center;
+    position: absolute;
+    bottom: 30%;
+    left: 42%;
+}
+.house h3 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 25px;
+    padding: 5px 10px;
+}
+.house span {
+   padding: 0px 11px;
+    font-size: 10px
+}
+
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+/* =========================CONTACT PAGE STYLE======================================================================================= */
+
+
+
+.enquire {
+    height: 350px;
+    width: 285px;
+    padding: 5px;
+    position: relative;
+}
+.contact form {
+    height: 630px;
+    width: 400px;
+}
+form textarea {
+    width: 370px;
+}
+
 }
 
 
@@ -1239,5 +1482,35 @@ footer{
     top: 270px;
     flex-direction: column;
 }
+
+
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+/* ===========================PROPERTIES STYLE======================================================================================= */
+
+
+.house {
+    color: white;
+    text-align: center;
+    position: absolute;
+    bottom: 30%;
+    left: 42%;
+}
+.house h3 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 40px;
+    padding: 10px 10px;
+}
+.house span {
+   padding: 5px 11px;
+    font-size: 15px
+}
+
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+/* ===========================CONTACT PAGE STYLE======================================================================================= */
+
+
+.enquire {
+    height: 350px;
+    width: 442px;
 
 }
