--- a/style.css
+++ b/style.css
@@ -136,7 +136,6 @@ nav a {
     color: red;
     font-weight: bold;
 }
-
 .feature .accordion-button:hover {
     color: orangered;
 }
@@ -144,8 +143,20 @@ nav a {
 .links {
     width: 500px;
 }
+.links .accordian-item{
+    background-color: whitesmoke !important;
+}
+/* .accordion-item {
+    background-color: whitesmoke !important;
+    border: none !important;
+}
 
-.details {
+.accordion-button {
+    background-color: transparent !important;
+    box-shadow: none !important;
+} */ 
+
+.container .details {
     width: 350px;
     display: flex;
     flex-direction: column;
@@ -308,6 +319,7 @@ nav a {
     gap: 70px;
 }
 
+
 .flat {
     width: 600px;
     height: 350px;
@@ -426,6 +438,9 @@ nav a {
     position: relative;
     padding-bottom: 700px; 
 }
+.agents img{
+    width: 100%;
+}
 
 .agents iframe {
     position: absolute;
@@ -496,6 +511,7 @@ form textarea {
     position: relative;
     left: 9%;
     top: 350px;
+    width: 50%
 }
 .phone,
 .mail {
@@ -652,6 +668,93 @@ form textarea {
     padding: 0px 80px;
 }
 
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+/* ===========================PROPERTY DETAILS PAGE STYLE======================================================================================= */
+.place{
+    position: relative;
+}
+.place img{
+    width:100%;
+}
+.single{
+    color: white;
+    text-align: center;
+    position:absolute;
+    bottom:30%;
+    left:35%;
+}
+.single span{
+    background-color: white;
+    color:black;
+    padding:10px 18px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.single h3{
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 40px;
+ font-weight: bolder;
+ padding:30px 10px;
+}
+.residence{
+    padding:80px;
+    display: flex;
+    gap:70px;
+}
+.residence img{
+    width:70%;
+}
+.residence .details {
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    box-shadow: 0px 0px 5px grey;
+    padding: 40px;
+    border-radius: 5px;
+}
+.residence .space {
+    display: flex;
+    gap: 30px;
+    border-bottom: 2px solid whitesmoke;
+    padding:5px;
+}
+
+.residence .space img {
+    width: 70px;
+    height: 70px;
+}
+
+
+.apartment-text span {
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.apartment-text h4 {
+    padding-bottom: 40px;
+    font-weight: bolder;
+}
+
+.apartment-text {
+    padding: 30px 80px;
+    margin-bottom: 50px;
+}
+
+.apartment-text .para {
+    text-align: justify;
+    border-top: 1px solid lightgray;
+    padding-top: 40px;
+    width: 68%;
+}
+.apartment-text .accordian{
+    background-color: whitesmoke;
+    width:900px;
+    margin-bottom:60px;
+}
+.know-more{
+    margin-top:30px;
+    width:68% ;
+}
 
 
 
@@ -821,7 +924,9 @@ form textarea {
     .deal {
         padding: 0px 30px;
     }
-
+    .data img{
+    width: 400px;
+}
     .find span {
         font-size: 13px;
     }
@@ -997,6 +1102,7 @@ footer {
     display:flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 .enquire{
      height: 350px;
@@ -1019,6 +1125,7 @@ footer {
     background-color: white;
     box-shadow: 0px 0px 5px grey;
     font-size: 18px;
+    margin-top: 123px;
 }
 .contact form label {
     width: 100%;
@@ -1034,11 +1141,79 @@ footer {
 }
 
 form textarea {
+    width: 365px;
     padding: 10px 20px;
     border: none;
     border-radius: 25px;
     background-color: whitesmoke;
 }
+.map iframe{
+    width:100%;
+    padding: 10px;
+}
+
+
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+/* ===========================PROPERTY DETAILS PAGE STYLE======================================================================================= */
+.single{
+    color: white;
+    text-align: center;
+    position:absolute;
+    bottom:2%;
+    left:25%;
+}
+.single span{
+    font-size: 10px;
+    padding:0px 18px;
+}
+.single h3{
+    font-size: 18px;
+ padding:5px 10px;
+}
+.residence{
+    display: flex;
+    flex-direction: column;
+    gap:70px;
+    align-items: center;
+}
+.residence img{
+    width: 400px;
+}
+.residence .details {
+    width: 350px;
+    gap: 30px;
+    padding: 10px;
+}
+.residence .space {
+    display: flex;
+    gap: 60px;
+    padding:10px;
+}
+
+.residence .space img {
+    width: 70px;
+    height: 70px;
+}
+.apartment-text h4 {
+    padding-bottom: 30px;
+    font-weight: bolder;
+}
+
+.apartment-text {
+    padding: 30px 80px;
+}
+.apartment-text .para {
+    text-align: justify;
+    border-top: 1px solid lightgray;
+    width:100%;
+    padding-top: 27px;
+    font-size: 12px;
+}
+.know-more{
+    margin-top:30px;
+    width:100% ;
+}
+
 
 }
 
@@ -1191,7 +1366,9 @@ form textarea {
     .deal {
         padding: 0px 30px;
     }
-
+.data img{
+    width: 600px;
+}
     .find span {
         font-size: 18px;
     }
@@ -1337,8 +1514,46 @@ form textarea {
     width: 370px;
 }
 
+
+
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+/* =========================PROPERTY DETAILS STYLE======================================================================================= */
+
+
+
+.residence{
+    display: flex;
+    flex-direction: column;
+    gap:70px;
+    align-items: center;
+}
+.residence img{
+    width: 700px;
+}
+.residence .details {
+    width: 400px;
 }
 
+.apartment-text h4 {
+    padding-bottom: 30px;
+    font-weight: bolder;
+}
+
+.apartment-text {
+    padding: 30px 80px;
+}
+.apartment-text .para {
+    text-align: justify;
+    border-top: 1px solid lightgray;
+    width:100%;
+    padding-top: 27px;
+}
+.know-more{
+    margin-top:30px;
+    width:100% ;
+}
+
+}
 
 /* --------------------------------------LAPTOP--------------------------------------------------------------------------------------------------------- */
 /* Media query for laptop */
@@ -1512,5 +1727,46 @@ form textarea {
 .enquire {
     height: 350px;
     width: 442px;
+
+}
+
+
+
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+/* ===========================PROPERTY DETAILS PAGE STYLE======================================================================================= */
+
+
+.single{
+    position:absolute;
+    bottom:15%;
+    left:35%;
+}
+.residence{
+    display: flex;
+    gap:30px;
+    align-items: center;
+    padding:30px;
+}
+.residence img{
+    width: 650px;
+    height:500px;
+}
+.residence .details {
+    width: 320px;
+}
+.apartment-text h4 {
+    padding-bottom: 30px;
+    font-weight: bolder;
+}
+
+.apartment-text {
+    padding: 30px 80px;
+}
+.apartment-text .para {
+    text-align: justify;
+    border-top: 1px solid lightgray;
+    width:100%;
+    padding-top: 27px;
+}
 
 }
