--- a/style.css
+++ b/style.css
@@ -573,13 +573,13 @@ footer{
  font-weight: bolder;
  padding:30px 10px;
 }
-.show {
+.list {
   display: flex;              /* enables flexbox */
   justify-content: center;    /* centers horizontally */
   gap: 20px;                  /* space between buttons */
-  margin:80px 0px;           /* optional: push them down */
+margin:80px 0px;         /* optional: push them down */
 }
-.show button{
+.list button{
     width:120px;
     border: none;
     border-radius: 4px;
